possible fix for mobile browser weird width overflow action

--- a/css/index.css
+++ b/css/index.css
@@ -31,6 +31,10 @@ body{
   overflow-x:hidden;
 }
 
+.entireBodyWrapper{
+  overflow-x:hidden;
+}
+
 h1{
   padding: 0;
   margin:  0;
